force-app/main/default/objects/Cloud__c/Cloud__c.object-meta.xml
<CustomObject>
    <label>クラウド管理</label>
    <nameField>
        <label>アカウント名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>