force-app/main/default/objects/Cloud__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先担当者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>クラウド管理</relationshipLabel>
    <relationshipName>ContactCloud</relationshipName>
    <type>Lookup</type>
</CustomField>