force-app/main/default/objects/Cloud__c/fields/ContactMail__c.field-meta.xml
<CustomField>
    <fullName>ContactMail__c</fullName>
    <formula>Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>担当者メール</label>
    <type>Text</type>
</CustomField>