force-app/main/default/objects/Cloud__c/fields/ContractTerminationDate__c.field-meta.xml
<CustomField>
    <fullName>ContractTerminationDate__c</fullName>
    <label>契約終了日</label>
    <type>Date</type>
</CustomField>