force-app/main/default/objects/Cloud__c/fields/Doller__c.field-meta.xml
<CustomField>
    <fullName>Doller__c</fullName>
    <defaultValue>false</defaultValue>
    <label>＄建て</label>
    <type>Checkbox</type>
</CustomField>