force-app/main/default/objects/Cloud__c/fields/FirstContractDate__c.field-meta.xml
<CustomField>
    <fullName>FirstContractDate__c</fullName>
    <label>初回契約日</label>
    <type>Date</type>
</CustomField>