force-app/main/default/objects/Cloud__c/fields/NewContractPlan__c.field-meta.xml
<CustomField>
    <fullName>NewContractPlan__c</fullName>
    <label>クラウド新プラン</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>スターター5</fullName>
            </value>
            <value>
                <fullName>スターター10</fullName>
            </value>
            <value>
                <fullName>スターター15</fullName>
            </value>
            <value>
                <fullName>スターター20</fullName>
            </value>
            <value>
                <fullName>プロフェッショナル20</fullName>
            </value>
            <value>
                <fullName>プロフェッショナル25</fullName>
            </value>
            <value>
                <fullName>プロフェッショナル30</fullName>
            </value>
            <value>
                <fullName>プロフェッショナル40</fullName>
            </value>
            <value>
                <fullName>プロフェッショナル50</fullName>
            </value>
            <value>
                <fullName>プロフェッショナル75</fullName>
            </value>
            <value>
                <fullName>プロフェッショナル100</fullName>
            </value>
            <value>
                <fullName>プロフェッショナル125</fullName>
            </value>
            <value>
                <fullName>プロフェッショナル150</fullName>
            </value>
            <value>
                <fullName>ビジネス100</fullName>
            </value>
            <value>
                <fullName>ビジネス125</fullName>
            </value>
            <value>
                <fullName>ビジネス150</fullName>
            </value>
            <value>
                <fullName>ビジネス200</fullName>
            </value>
            <value>
                <fullName>ビジネス300</fullName>
            </value>
            <value>
                <fullName>HSL50</fullName>
            </value>
            <value>
                <fullName>HSL100</fullName>
            </value>
            <value>
                <fullName>HSL150</fullName>
            </value>
            <value>
                <fullName>HSL200</fullName>
            </value>
            <value>
                <fullName>HSL300</fullName>
            </value>
            <value>
                <fullName>HSL400</fullName>
            </value>
            <value>
                <fullName>HSL500</fullName>
            </value>
            <value>
                <fullName>エンタープライズ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>