force-app/main/default/objects/Cloud__c/fields/OldContractPlan__c.field-meta.xml
<CustomField>
    <fullName>OldContractPlan__c</fullName>
    <label>旧契約プラン</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>スターター</fullName>
            </value>
            <value>
                <fullName>プロフェッショナル</fullName>
            </value>
            <value>
                <fullName>プロフェッショナル＋</fullName>
            </value>
            <value>
                <fullName>ビジネス</fullName>
            </value>
            <value>
                <fullName>ビジネス＋</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>