force-app/main/default/objects/Cloud__c/fields/Opp__c.field-meta.xml
<CustomField>
    <fullName>Opp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商談</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>クラウド管理</relationshipLabel>
    <relationshipName>OppCloud</relationshipName>
    <type>Lookup</type>
</CustomField>