force-app/main/default/objects/Cloud__c/fields/RenewalContractDate__c.field-meta.xml
<CustomField>
    <fullName>RenewalContractDate__c</fullName>
    <label>契約更新日</label>
    <type>Date</type>
</CustomField>