force-app/main/default/objects/Cloud__c/fields/Sharepoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Sharepoint_URL__c</fullName>
    <label>SharepointフォルダURL</label>
    <type>Url</type>
</CustomField>