force-app/main/default/objects/Cloud__c/fields/TEL__c.field-meta.xml
<CustomField>
    <fullName>TEL__c</fullName>
    <formula>Contact__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>担当者TEL</label>
    <type>Text</type>
</CustomField>